2015-08-19

2015-08-19
- add UiEditGameName class
- comment sources (doxygen)
- MainWindow is now a singleton

2015-08-19
- create first actions
- create the controller