@@ -1,7 +1,11 @@
+#include "Global.hpp"
 #include "Controller.hpp"
 #include "MainWindow.hpp"
 #include "UiEditGameName.hpp"
-#include <QDebug>
+#include <QDir>
+#include <QFileInfo>
+#include <QFileDialog>
+#include <QMessageBox>
 
 /**
  * @brief Pointer of the singleton
@@ -13,7 +17,6 @@ static Controller* controller = nullptr;
  */
 Controller::Controller()
     : QObject(nullptr)
-    , CurrentGame(nullptr)
 {
 }
 
@@ -35,7 +38,6 @@ Controller::~Controller()
 
 /**
  * @brief Getter of the singleton. Create it if needed
- *
  * @return Controller* Points to the singleton
  */
 Controller* Controller::get()
@@ -66,6 +68,20 @@ Controller* Controller::realInstance()
  ***********************************************************/
 
 /**
+ * @brief This method is called by the main window when the application wants to terminate
+ * @return bool True if all the game were closed (the application may exit), else false (can't exit)
+ */
+bool Controller::appCloseRequested()
+{
+    while (GameList.size() != 0) {
+        if (!closeGame(GameList.last().first)) {
+            return false; // Game closing aborted by the user
+        }
+    }
+    return true; // All games closed succesfully
+}
+
+/**
  * @brief Create a new game
  *
  * A game needs a name. To avoid a useless creation/destruction if the name input is cancelled,
@@ -81,59 +97,194 @@ void Controller::newGame()
         GameUi* ui = new GameUi;                          // Create the ui
         MainWindow::get()->addGameUi(ui, name);           // Add it to the main window
         GameList.append(QPair<Game*, GameUi*>(game, ui)); // Push the game/ui pair
-        CurrentGame = &GameList.last();                   // Update CurrentGame
         game->populateUi();                               // Now the game can fill the ui
     }
 }
 
 void Controller::openGame()
 {
-}
-
-void Controller::saveGame()
-{
-}
-
-void Controller::saveGameAs()
-{
-}
-
-void Controller::saveAllGames()
-{
-}
-
-void Controller::closeCurrentGame()
-{
-    if (CurrentGame->first->modified()) {
-        // ask if save
+    QString filename = QFileDialog::getOpenFileName(MainWindow::get(), tr("Open a game"), QDir::homePath(), FMETRO_GAME_FILE_FILTER);
+    if (!filename.isEmpty()) {
+        Game* game = Game::open(filename);
+        GameUi* ui = new GameUi;
+        MainWindow::get()->addGameUi(ui, game->name());
+        GameList.append(QPair<Game*, GameUi*>(game, ui));
+        game->populateUi();
     }
 }
 
+/**
+ * @brief Save a game which has already a filename
+ *
+ * This method is called by a user request in the main window
+ *
+ * @param ui Ui of the game to save
+ */
+void Controller::saveGame(QWidget* ui)
+{
+    saveGame(gameOf(static_cast<GameUi*>(ui)));
+}
+
+/**
+ * @brief Save a game which has already a filename
+ *
+ * @param game Game to save
+ */
+void Controller::saveGame(Game* game)
+{
+    game->save();
+}
+
+/**
+ * @brief Request a filename to save a game to a file
+ *
+ * This method is called by a user request in the main window
+ *
+ * @param ui Ui of the game to save
+ */
+void Controller::saveGameAs(QWidget* ui)
+{
+    saveGameAs(gameOf(static_cast<GameUi*>(ui)));
+}
+
+/**
+ * @brief Request a filename to save a game, then save it
+ *
+ * The game isn't be saved if the file dialog is cancelled
+ *
+ * @param game The game to save
+ * @return bool True if a filename was choosen, else false
+ */
+bool Controller::saveGameAs(Game* game)
+{
+    QString filename = QFileDialog::getSaveFileName(MainWindow::get(), QString(tr("Save game %1")).arg(game->name()), QDir::homePath(), FMETRO_GAME_FILE_FILTER);
+    if (filename.isEmpty()) {
+        return false;
+    }
+    if (QFileInfo(filename).suffix() != QString(FMETRO_GAME_FILE_EXTENSION)) {
+        filename.append(QString(".%1").arg(FMETRO_GAME_FILE_EXTENSION));
+    }
+    game->setFilename(filename);
+    saveGame(game);
+    return true;
+}
+
+/**
+ * @brief Browse all the games, save the ones which have a file, and prompt for the ones which have been newly created
+ * @return void
+ */
+void Controller::saveAllGames()
+{
+    for (int i = 0; i < GameList.size(); i++) {
+        Game* game = GameList[i].first;
+        if (game->fullfilename().size() == 0) {
+            saveGameAs(game);
+        } else {
+            saveGame(game);
+        }
+    }
+}
+
+/**
+ * @brief Message thrown by the main window to say that the current displayed game is changing
+ *
+ * @param ui Ui of the new current game
+ */
 void Controller::newCurrentUi(QWidget* ui)
 {
     GameUi* gameui = static_cast<GameUi*>(ui);
-    for (int i = 0; i < GameList.size(); i ++) {
+    for (int i = 0; i < GameList.size(); i++) {
         if (GameList.at(i).second == gameui) {
-            CurrentGame = &GameList[i];
+            // Change mainwindow title
+            // Adjust actions
             break;
         }
     }
 }
 
+/**
+ * @brief Message thrown by the main window to say that a game needs to be closed
+ *
+ * @param ui Ui of the game
+ */
 void Controller::gameCloseRequested(QWidget* ui)
 {
-    GameUi* gameui = static_cast<GameUi*>(ui);
-    if (gameOf(gameui)->modified()) {
-        // ask if save
-    }
+    closeGame(gameOf(static_cast<GameUi*>(ui)));
 }
 
-Game* Controller::gameOf(GameUi* ui)
+/**
+ * @brief Method called internally by the controller
+ *
+ * First, a dialog is popped to ask the user if he wants to save the game
+ * If he wants to do so, the game is saved in its file.
+ * If the game hasn't a file yet, the user is prompted for a filename. If the user cancels this dialog, the game isn't closed
+ *
+ * @param game Game to close
+ * @return bool True if the game was closed, else false if the user wants to stop the closing process
+ */
+bool Controller::closeGame(Game* game)
 {
-    for (int i = 0; i < GameList.size(); i ++) {
-        if (GameList.at(i).second == ui) {
-            return GameList.at(i).first;
+    QMessageBox::StandardButton answer;
+    if (game->modified()) {
+        // The game is modified, but wasn't opened from a file: probably want to "save as"
+        if (game->fullfilename().isEmpty()) {
+            answer = QMessageBox::question(MainWindow::get(), QString(tr("Close %1")).arg(game->name()), tr("The game %1 is modified, do you want to save it before closing?").arg(game->name()),
+                                           QMessageBox::StandardButton::Save | QMessageBox::StandardButton::Discard | QMessageBox::StandardButton::Cancel);
+            if (answer == QMessageBox::StandardButton::Cancel) {
+                return false;
+            }
+            if (answer == QMessageBox::StandardButton::Save) {
+                if (!saveGameAs(game)) {
+                    return false; // Cancel
+                }
+            }
+        } else {
+            // The game is modified, and was opened from a file: probably just need to "save"
+            answer = QMessageBox::question(MainWindow::get(), QString(tr("Close %1")).arg(game->name()),
+                                           tr("The game %1 (%2) is modified, do you want to save it before closing?").arg(game->name()).arg(game->fullfilename()),
+                                           QMessageBox::StandardButton::Save | QMessageBox::StandardButton::Discard | QMessageBox::StandardButton::Cancel);
+            if (answer == QMessageBox::StandardButton::Cancel) {
+                return false;
+            }
+            if (answer == QMessageBox::StandardButton::Save) {
+                saveGame(game);
+            }
         }
     }
-    return nullptr;
+
+    // Ok, modifications saved or discarded, destroy the game and its ui
+    GameUi* ui = uiOf(game);
+    MainWindow::get()->RemoveGameUi(ui);
+    delete ui;
+    delete game;
+    GameList.removeOne(QPair<Game*, GameUi*>(game, ui));
+    return true;
+}
+
+/**
+ * @brief Find the game associated with the provided Ui
+ * @param ui Ui of the game
+ * @return Game* Game associated with the Ui
+ */
+Game* Controller::gameOf(GameUi* ui)
+{
+    int i = 0;
+    while (GameList.at(i).second != ui) {
+        ++i;
+    }
+    return GameList[i].first;
+}
+
+/**
+ * @brief Find the ui associated with the provided Game
+ * @param game Game of the Ui
+ * @return GameUi* Ui associated with the game
+ */
+GameUi* Controller::uiOf(Game* game)
+{
+    int i = 0;
+    while (GameList.at(i).first != game) {
+        ++i;
+    }
+    return GameList[i].second;
 }
